feat(device): add device registration endpoint with key binding
POST /api/v1/devices registers or updates a client device (SYNC scope or JWT),
binds the authenticating API key to it (api_keys.device_id), and rejects
ownership conflicts with 409 DEVICE_001. Device id is a client-supplied UUID:
Device drops @GeneratedValue and gains a null-initialized @Version so Spring
Data persists new rows instead of merging. @RequiresApiKeyScope now accepts
any-of semantics; GET /devices allows READ or SYNC. Audits via DEVICE_LINKED
with new ResourceType.DEVICE.